# roadmap-ai

./: .env.example  .gitignore  CODEX_TASKS.md  DEPLOY_DASHBOARD_PHASE3.md  DISPATCH_RULES.md  QUICKSTART.md  README.md  ROADMAP.md  SSH_INTEGRATION.md  dispatch_ops.yaml  giniesystem_commercial_stack.py  package-lock.json  package.json  plan-v1.json  plan-v2.json  plan.csv  plan.json  plan.md  pyproject.toml  setup.py  test_cleanup.sh  test_db_layer.py  tsconfig.json  turbo.json
.credentials/: load_credentials.sh
.truth/: AUTH_PROOF.md  COST_BASELINE.md  DEPLOY_MAP.md  HANDOVER_TRUTH_LAYER_20260408.md  NODE_ROLE_MAP.md  OFFER_AI_OPS_SNAPSHOT_48H.md  OWNER.txt  README_TRUTH_LAYER.md  SECRETS_INDEX.md  TRUTH_SOURCE.md
dashboard/: decisions.html  forecast.html  index.html  orchestration.html  pr_lane.html  progress.html  remote_health.html  revenue.html  risk_summary.html  smart_next.html
docs/: 01_SYSTEM_OVERVIEW.md  02_ROADMAP_CLI.md  03_DISPATCH.md  04_MISSION_CONTROL.md  05_DASHBOARD_UI.md  06_AGENT_ORCHESTRATION.md  07_INTEGRATIONS.md  08_OPERATIONS.md  09_ROADMAP_NEXT.md  10_VERIFIED_STATE_2026-04-03.md  11_RECENT_STATE_SYNC_2026-04-04.md  AI_OPERATOR_ROOT_PROMPT.md  ARCHITECTURE.md  DASHBOARD.md  DECISIONS.md  ECHOBOT_OPERATOR_SPEC.md  ECHOBOT_SUMMARY.md  EXPORT_GUIDE.md  ORION.md  ROADMAP.md  STRATEGY.md
mission-control/: .gitignore  HANDOFF.md  README.md  ROADMAP.md  actions.json  closeout_agent.py  ginie-wrap.sh  hsync.sh  install.sh  k-human.sh  missionctl.py  package-lock.json  package.json  projects.json  start.sh  watch_state.json  window_memory.json
(+185 files in other folders)
