[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadmap-ai"
version = "0.1.0"
description = "Never lose the thread again - Continuity engine for projects"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.0",
  "sqlalchemy>=2.0.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
]

[project.scripts]
roadmap = "roadmap.cli:main"

[tool.setuptools.packages.find]
include = ["roadmap*"]
